fix: fix gradient behind icon

--- a/src/.vitepress/theme/style.scss
+++ b/src/.vitepress/theme/style.scss
@@ -104,8 +104,8 @@
  
    --vp-home-hero-image-background-image: linear-gradient(
      -45deg,
-     #bd34fe 50%,
-     #47caff 50%
+     #432371 50%,
+     #faae7b 50%
    );
    --vp-home-hero-image-filter: blur(44px);
  }
